--- a/public/index.html
+++ b/public/index.html
@@ -271,7 +271,7 @@
     </div>
     </div>
      
-    <div class="genral__blog">
+    
     <div class="blog">
     <div class="blog__photo">
     <img class="blog__inner__photo" src="img/blog/1.png" alt="">
@@ -427,7 +427,7 @@
 
 </div>
 
-
+</div>
 
 
 
